--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,8 @@
 	<description>HIV Trainings recording Tool</description>
 	<properties>
 		<java.version>21</java.version>
+		<sonar.organization>chihwayi</sonar.organization>
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
 	</properties>
 	<dependencies>
 		<dependency>
